# Splendor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  Splendor.cabal  cabal.project  docker-compose.dev.yml  docker-compose.yml
.claude/commands/: deploy.md  ssh.md
.github/workflows/: deploy.yml
client/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
client/src/: index.css  main.tsx
client/src/components/: ErrorBanner.tsx
client/src/components/action-panel/: ActionPanel.tsx  BuyCardPanel.tsx  GemReturnPanel.tsx  NobleChoicePanel.tsx  ReserveCardPanel.tsx  TakeGemsPanel.tsx  actionFilters.test.ts
client/src/components/game-board/: CardActionOverlay.tsx  CardDisplay.tsx  ChatPanel.tsx  GameBoard.tsx  GameOverOverlay.test.tsx  GameOverOverlay.tsx  GameStatus.tsx  GemBank.tsx  GemToken.tsx  MoveLog.tsx  NobleRow.tsx  TierRow.tsx
client/src/components/lobby/: CreateLobbyForm.tsx  JoinLobbyDialog.tsx  LobbyDetail.tsx  LobbyList.tsx
client/src/components/player-area/: PlayerArea.tsx  PlayerCard.tsx
client/src/hooks/: useGameSocket.ts
client/src/pages/: GamePage.test.tsx  GamePage.tsx  HomePage.test.tsx  HomePage.tsx  LobbyPage.test.tsx  LobbyPage.tsx
client/src/services/: api.ts  websocket.ts
client/src/stores/: gameStore.test.ts  gameStore.ts  sessionStore.test.ts  sessionStore.ts
client/src/types/: game.ts  gems.test.ts  gems.ts  index.ts
client/src/utils/: moveLog.test.ts  moveLog.ts
nginx/: Dockerfile  nginx.dev.conf  nginx.prod.conf  splendor.conf
splendor-ai/: splendor-ai.cabal
splendor-ai/src/Splendor/AI/: Agent.hs  MCTS.hs  Random.hs
splendor-ai/src/Splendor/AI/MCTS/: Backpropagation.hs  Expansion.hs  Selection.hs  Simulation.hs  Tree.hs
splendor-ai/test/Splendor/AI/: MCTSSpec.hs  RandomSpec.hs
splendor-ai/test/Splendor/AI/MCTS/: ExpansionSpec.hs  SimulationSpec.hs
splendor-core/: splendor-core.cabal
splendor-core/src/Splendor/Core/: CardData.hs  Engine.hs  Setup.hs  Types.hs
splendor-core/src/Splendor/Core/Rules/: ActionValidation.hs  CardLogic.hs  GemLogic.hs  NobleLogic.hs  WinCondition.hs
splendor-core/src/Splendor/Core/Types/: Action.hs  Board.hs  Card.hs  GameState.hs  Gem.hs  Noble.hs  Player.hs
splendor-core/test/Splendor/Core/: CardDataSpec.hs  EngineScenarioSpec.hs  EngineSpec.hs  SetupSpec.hs  TestHelpers.hs
splendor-core/test/Splendor/Core/Rules/: ActionValidationSpec.hs  CardLogicSpec.hs  GemLogicSpec.hs  NobleLogicSpec.hs  WinConditionSpec.hs
splendor-core/test/Splendor/Core/Types/: GameStateSpec.hs  GemSpec.hs  PlayerSpec.hs
splendor-server/: Dockerfile  splendor-server.cabal
splendor-server/app/: Main.hs
splendor-server/src/Splendor/Server/: AIRunner.hs  API.hs  App.hs  Config.hs  GameManager.hs  LobbyCleanup.hs  Persistence.hs  Restore.hs  Types.hs  WebSocket.hs
splendor-server/src/Splendor/Server/API/: Game.hs  Lobby.hs
splendor-server/src/Splendor/Server/Persistence/: Handle.hs  Schema.hs
splendor-server/test/Splendor/Server/: AIRunnerSpec.hs  GameManagerSpec.hs  GameplayIntegrationSpec.hs  LobbyCleanupSpec.hs  PersistenceSpec.hs  RestoreSpec.hs  TestHelpers.hs  TypesSpec.hs  WebSocketSpec.hs
splendor-server/test/Splendor/Server/API/: GameHTTPSpec.hs  GameSpec.hs  LobbyHTTPSpec.hs  LobbySpec.hs
src/: Main.hs
src/Game/Data/: Action.hs  Card.hs  Game.hs  GemHolder.hs  Gems.hs  Player.hs
tests/: MainTest.hs
tests/Game/Data/: GemsTest.hs
