cabal-version: 3.0
name:          splendor-server
version:       0.1.0.0
synopsis:      HTTP and WebSocket server for Splendor board game
license:       MIT
build-type:    Simple

common shared
  default-language: GHC2021
  default-extensions:
    OverloadedStrings
    DerivingStrategies
    DeriveGeneric
    DeriveAnyClass
    GeneralizedNewtypeDeriving
    LambdaCase
    RecordWildCards
    DataKinds
    TypeOperators
  ghc-options: -Wall -Wcompat

library
  import:         shared
  hs-source-dirs: src
  exposed-modules:
    Splendor.Server.App
    Splendor.Server.Config
    Splendor.Server.API
    Splendor.Server.API.Lobby
    Splendor.Server.API.Game
    Splendor.Server.WebSocket
    Splendor.Server.GameManager
    Splendor.Server.Persistence
    Splendor.Server.Persistence.Schema
    Splendor.Server.Types
  build-depends:
    base            >= 4.17 && < 5,
    splendor-core,
    splendor-ai,
    aeson           >= 2.1,
    containers      >= 0.6,
    text            >= 2.0,
    bytestring      >= 0.11,
    servant         >= 0.20,
    servant-server  >= 0.20,
    servant-websockets >= 2.0,
    warp            >= 3.3,
    wai             >= 3.2,
    wai-cors        >= 0.2,
    websockets      >= 0.13,
    sqlite-simple   >= 0.4,
    stm             >= 2.5,
    uuid            >= 1.3,
    random          >= 1.2,
    time            >= 1.12,
    mtl             >= 2.3,

executable splendor-server
  import:         shared
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    base,
    splendor-server,
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite splendor-server-test
  import:         shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    base,
    splendor-server,
    splendor-core,
    hspec >= 2.10,
