cabal-version: 3.0
name:          splendor-server
version:       0.1.0.0
synopsis:      HTTP and WebSocket server for Splendor board game
license:       MIT
build-type:    Simple

common shared
  default-language: GHC2021
  default-extensions:
    OverloadedStrings
    DerivingStrategies
    DeriveGeneric
    DeriveAnyClass
    GeneralizedNewtypeDeriving
    LambdaCase
    RecordWildCards
    DataKinds
    TypeOperators
  ghc-options: -Wall -Wcompat

library
  import:         shared
  hs-source-dirs: src
  exposed-modules:
    Splendor.Server.App
    Splendor.Server.Config
    Splendor.Server.API
    Splendor.Server.API.Lobby
    Splendor.Server.API.Game
    Splendor.Server.AIRunner
    Splendor.Server.WebSocket
    Splendor.Server.GameManager
    Splendor.Server.Persistence
    Splendor.Server.Persistence.Handle
    Splendor.Server.Persistence.Schema
    Splendor.Server.Restore
    Splendor.Server.Types
  build-depends:
    base            >= 4.17 && < 5,
    splendor-core,
    splendor-ai,
    aeson           >= 2.1,
    containers      >= 0.6,
    text            >= 2.0,
    bytestring      >= 0.11,
    servant         >= 0.20,
    servant-server  >= 0.20,
    servant-websockets >= 2.0,
    warp            >= 3.3,
    wai             >= 3.2,
    wai-cors        >= 0.2,
    websockets      >= 0.13,
    sqlite-simple   >= 0.4,
    stm             >= 2.5,
    uuid            >= 1.3,
    random          >= 1.2,
    time            >= 1.12,
    mtl             >= 2.3,

executable splendor-server
  import:         shared
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    base,
    splendor-server,
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite splendor-server-test
  import:         shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:
    Splendor.Server.TypesSpec
    Splendor.Server.GameManagerSpec
    Splendor.Server.GameplayIntegrationSpec
    Splendor.Server.PersistenceSpec
    Splendor.Server.RestoreSpec
    Splendor.Server.API.LobbySpec
    Splendor.Server.API.GameSpec
    Splendor.Server.API.LobbyHTTPSpec
    Splendor.Server.API.GameHTTPSpec
    Splendor.Server.WebSocketSpec
    Splendor.Server.AIRunnerSpec
    Splendor.Server.TestHelpers
  build-depends:
    base,
    splendor-server,
    splendor-core,
    splendor-ai,
    hspec          >= 2.10,
    aeson          >= 2.1,
    containers     >= 0.6,
    stm            >= 2.5,
    servant-server >= 0.20,
    text           >= 2.0,
    time           >= 1.12,
    random         >= 1.2,
    wai            >= 3.2,
    warp           >= 3.3,
    wai-extra      >= 3.1,
    websockets     >= 0.13,
    http-types     >= 0.12,
    bytestring     >= 0.11,
    sqlite-simple  >= 0.4,
    temporary      >= 1.3,
    directory      >= 1.3,
    filepath       >= 1.4,
  build-tool-depends:
    hspec-discover:hspec-discover >= 2.10,
